    available as it's located at /usr/bin. Thanks to Mario 'BitKoenig' Holbe
    for bugreport and patch. (closes: #611747)
  * add debian/patches/01_luksAddKey_return_code.patch, fixes the luksAddKey
    return code when the master key is used. (closes: #610366)
  * fix luksformat script to invoke usage() with --help. (closes: #612947)

 -- Jonas Meurer <mejo@debian.org>  Sun, 13 Feb 2011 14:24:02 +0100

cryptsetup (2:1.2.0-1) experimental; urgency=low

  * new major upstream release (closes: #603804)
    - adds text version of FAQ
    - adds new options --use-random and --use-urandom for MK generation
    - fixes luksRemoveKey to not ask for remaining keyslot passphrase
    - no longer supports luksDelKey command (replaced by luksKillSlot)
    - no longer supports reload command, dmsetup reload should be used instead
    - adds support to change the UUID later (with --uuid cmd option)
    - adds --dump-master-key option for luksDump command
    - no luksOpen, luksFormat and create for open devices (closes: #600208)
    - remove debian/patches/01_manpage.patch, incorporated upstream
    - and many more changes, see upstream changelog for further information
    - update debian/libcryptsetup1.symbols 
  * invoke update-initramfs at cryptsetup removal in order to not leave behind
    a broken initramfs. thanks to ubuntu for the hint.
  * link dynamically against libgcrypt11 and libgpg-error0 now that the
    libraries have been moved to /lib. add versioned depends for libcryptsetup1
    on (libgcrypt >= 1.4.6-2) and libgpg-error0 (>= 1.10-0.1).
  * debian/initramfs/cryptroot-script: prereq 'cryptroot-prepare' added in
    order to support cryptroot to depend on custom initramfs scripts. thanks
    to Marc Haber for the suggestion. (closes: #601311)
  * debian/cryptdisks.functions:
    + fix check for ownership and permissions of $key to work with slighly
      different output of 'ls -l' with selinux enabled. (closes: #600522)